# RustTest

./: Cargo.toml
src/: graphics.rs  main.rs  shader.wgsl  shadow.wgsl  solidShader.wgsl
src/graphics/: camera.rs  instance.rs  texture.rs  vertex.rs
