[package]
name = "test_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14"
cgmath = "0.18"
env_logger = "0.9"
futures = "0.3"
pollster = "0.2"
winit = "0.27"
rand = "0.8.0"
bytemuck = {version = "1.4", features = ["derive"]}
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]